<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivities.ForgetPasswordActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/white"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/cairo_regular"
                android:text="@string/forgetPassword"
                android:textColor="@color/midBlue"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="154dp"
                tools:layout_editor_absoluteY="39dp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="20dp"
                app:srcCompat="@drawable/forgetpassword" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/cairo_regular"
                android:gravity="center"
                android:padding="10dp"
                android:textStyle="bold"
                android:text="@string/wile_send_password"
                android:textColor="@color/midBlue"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="154dp"
                tools:layout_editor_absoluteY="39dp" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/edittext_shape"
                android:ems="10"
                android:fontFamily="@font/cairo_regular"
                android:gravity="start"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:paddingStart="30dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColorHint="@color/editText_hint" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/login_shape"
                android:fontFamily="@font/cairo_regular"
                android:gravity="center"
                android:text="@string/send"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>