<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:padding="7dp"
                app:srcCompat="@drawable/out" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/cairo_semibold"
                android:text="تسجيل الدخول"
                android:textColor="@color/bg_Splash_End"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="154dp"
                tools:layout_editor_absoluteY="39dp" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/btn_google_plus"
                android:fontFamily="@font/cairo_bold"
                android:gravity="center"
                android:text="@string/google_plus"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/btn_facebook"
                android:fontFamily="@font/cairo_bold"
                android:gravity="center"
                android:text="@string/facebook"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="20dp"
                android:background="#cfcfcf">

            </RelativeLayout>

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edittext_shape"
                android:ems="10"
                android:fontFamily="@font/cairo_regular"
                android:gravity="right"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:paddingTop="10dp"
                android:paddingRight="30dp"
                android:paddingBottom="10dp"
                android:textColorHint="@color/editText_hint" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/edittext_shape"
                android:ems="10"
                android:fontFamily="@font/cairo_regular"
                android:gravity="right"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:paddingTop="10dp"
                android:paddingRight="30dp"
                android:paddingBottom="10dp"
                android:textColorHint="@color/editText_hint" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/login_shape"
                android:fontFamily="@font/cairo_bold"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/cairo_regular"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/forgetPassword" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/create_account"
                android:fontFamily="@font/cairo_bold"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/create_account"
                android:textColor="@color/create_account_text"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>