<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash"
    tools:context=".SplashActivities.SplashActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="194dp"
                android:layout_height="69.4pt"
                android:layout_gravity="center"
                android:layout_marginTop="70dp"
                app:srcCompat="@drawable/gawlalogo"
                tools:layout_editor_absoluteX="118dp"
                tools:layout_editor_absoluteY="95dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="367dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/cairo_regular"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/tit1e"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="29dp"
                tools:layout_editor_absoluteY="291dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="317dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/cairo_regular"
                android:gravity="center"
                android:text="@string/tit2"
                android:textColor="@android:color/white"
                android:textSize="@dimen/margin_large"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="29dp"
                tools:layout_editor_absoluteY="291dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="10dp">

                <LinearLayout
                    android:id="@+id/btn_kuwait"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginBottom="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_splash2"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/flag_kuwait" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/cairo_regular"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/kuwait"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_egypt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginBottom="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_splash2"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/flag_egypt" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/cairo_regular"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/egypt"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>